@@ -10,7 +10,6 @@ import com.basic.myspringboot.repository.StudentDetailRepository;
 import com.basic.myspringboot.repository.StudentRepository;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -29,7 +28,8 @@ public class StudentService {
         return studentRepository.findAll()
                 .stream()
                 .map(StudentDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+        //.collect(Collectors.toList());
     }
 
     public StudentDTO.Response getStudentById(Long id) {
@@ -66,28 +66,29 @@ public class StudentService {
                     request.getDetailRequest().getPhoneNumber());
         }
 
-        // Create student entity 생성
+        // Create student 엔티티 생성
         Student student = Student.builder()
-                .name(request.getName())   //이름
-                .studentNumber(request.getStudentNumber()) //학번
+                .name(request.getName())  //이름
+                .studentNumber(request.getStudentNumber())  //학번
                 .build();
 
         // Create StudentDetail 엔티티 생성
         if (request.getDetailRequest() != null) {
             StudentDetail studentDetail = StudentDetail.builder()
-                    .address(request.getDetailRequest().getAddress())  //주소
+                    .address(request.getDetailRequest().getAddress()) //주소
                     .phoneNumber(request.getDetailRequest().getPhoneNumber()) //전화번호
-                    .email(request.getDetailRequest().getEmail()) // 이메일
+                    .email(request.getDetailRequest().getEmail()) //이메일
                     .dateOfBirth(request.getDetailRequest().getDateOfBirth()) //생년월일
-                    //생성하는 StudentDetail과 연관된 Student 엔티티를 저장
-                    .student(student) 
+                    //생성하는 StudentDetail과 연관된 Student 엔티티 객체를 저장
+                    .student(student)
                     .build();
-
+            //양방향 연관관계이므로 Student와 연관된 StduentDetail 엔티티 객체를 저장
             student.setStudentDetail(studentDetail);
         }
 
-        // Save and return the student
+        // Student와 StudentDetail의 라이프사이클이 동일하므로 Student만 저장합
         Student savedStudent = studentRepository.save(student);
+        // Student를 StudentDTO.Response 로 변환
         return StudentDTO.Response.fromEntity(savedStudent);
     }
 
@@ -98,8 +99,9 @@ public class StudentService {
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
                         "Student", "id", id));
 
-        // Check if another student already has the student number
+        // 저장된 학번과 요청한 학번이 일치하지 않으면
         if (!student.getStudentNumber().equals(request.getStudentNumber()) &&
+                //요청한 학번이 중복되는지 체크하기 위해서 해당학번으로 Student 조회
                 studentRepository.existsByStudentNumber(request.getStudentNumber())) {
             throw new BusinessException(ErrorCode.STUDENT_NUMBER_DUPLICATE,
                     request.getStudentNumber());
@@ -111,12 +113,16 @@ public class StudentService {
 
         // Update student detail if provided
         if (request.getDetailRequest() != null) {
+            //Student가 연관된 StudentDetail 객체를 가져오기
             StudentDetail studentDetail = student.getStudentDetail();
 
-            // Create new detail if not exists
+            // Create new detail if not exists ( 저장된 StudentDetail 정보가 없을 경우 )
             if (studentDetail == null) {
+                // 새로운 StudentDetail 객체생성
                 studentDetail = new StudentDetail();
+                //연관된 Student 객체 저장
                 studentDetail.setStudent(student);
+                //연관된 StudenDetail 객체 저장
                 student.setStudentDetail(studentDetail);
             }
 
